Android: Add android image for Qt 6.2
Change-Id: Ib48209643b755954f0f38c3f1bcfb487e23cf292
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,6 +84,17 @@ services:
         QT_VERSION: 6.0.0
         ANDROID_NDK_VERSION: 23.0.7599858
 
+  focal-android-620:
+    << : *linux
+    hostname: focal-android
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-6.2.0-0
+    build:
+      dockerfile: docker/focal/test-android.Dockerfile
+      context: .
+      args:
+        QT_VERSION: 6.2.0
+        ANDROID_NDK_VERSION: 23.0.7599858
+
   focal-android-ndk-r19c:
     << : *linux
     hostname: focal-android
