--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -353,6 +353,12 @@ jobs:
             script: './scripts/test-qt-for-android.sh',
           }
         - {
+            name: 'Run Android tests (Qt 6.2.0)',
+            image: 'focal-android-620',
+            profile: '',
+            script: './scripts/test-qt-for-android.sh',
+          }
+        - {
             name: 'Run Android tests (ndk r19c)',
             image: 'focal-android-ndk-r19c',
             profile: '',
