cmake: fix Windows build
Do not use add_qbs_library as it does not support
INTERFACE libraries.

Change-Id: Ie7b09a4fa620c8030a4130d6b5919009688811a7
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/src/shared/variant/CMakeLists.txt
+++ b/src/shared/variant/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_qbs_library(qbsvariant
-    INTERFACE
-    SOURCES variant.h variant.hpp
-    )
+add_library(qbsvariant INTERFACE)
+target_include_directories(
+    qbsvariant
+    INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/>)
