--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -787,3 +787,52 @@ jobs:
     - name: Run Tests
       run: ${{ matrix.config.script }} ./release/install-root/bin
       shell: bash
+
+  test-windows-extra:
+    name: ${{ matrix.config.name }}
+    runs-on: windows-latest
+    timeout-minutes: 60
+    needs: build-windows
+    strategy:
+      fail-fast: false
+      matrix:
+        config:
+        - {
+            name: 'Run Windows tests (OpenWatcom)',
+            testProfile: 'watcom-2_0_0-x86',
+            script: './scripts/test-baremetal.sh',
+          }
+    env:
+      QTEST_FUNCTION_TIMEOUT: 9000000
+      QBS_AUTOTEST_PROFILE: 'extra'
+      QBS_TEST_SOURCE_ROOT: 'tests'
+      QT_ASSUME_STDERR_HAS_CONSOLE: 1
+    steps:
+    - uses: actions/checkout@v1
+    - name: Download artifact
+      uses: actions/download-artifact@v1
+      with:
+        name: qbs-windows-${{ github.run_id }}.zip
+        path: ./
+    - name: Unpack artifact
+      run: |
+        mkdir -p release/install-root
+        cd release/install-root
+        7z x ../../qbs-windows-${{ github.run_id }}.zip
+      shell: bash
+    - name: Update PATH
+      run: echo "./release/install-root/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+    - name: Install required packages
+      run: choco install -y pkgconfiglite --download-checksum=6004df17818f5a6dbf19cb335cc92702
+    - name: Install OpenWatcom
+      uses: ./.github/actions/download-ow
+    - name: Setup Qbs
+      run: |
+        qbs setup-toolchains --detect
+        qbs config profiles.extra.baseProfile ${{ matrix.config.testProfile }}
+        qbs config defaultProfile extra
+        qbs config --list
+      shell: bash
+    - name: Run Tests
+      run: ${{ matrix.config.script }} ./release/install-root/bin
+      shell: bash
