Fix size_t -> uint conversion warnings with Qt 6
Example:

codelocation.h(88): warning C4267: 'return': conversion from 'size_t' to
'uint', possible loss of data

Change-Id: I06fa98d1e6d8eec85720bd6c5150a505ea98bdd1
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/src/lib/corelib/CMakeLists.txt
+++ b/src/lib/corelib/CMakeLists.txt
@@ -334,6 +334,7 @@ set(TOOLS_SOURCES
     pathutils.h
     persistence.cpp
     persistence.h
+    porting.h
     preferences.cpp
     processresult.cpp
     processresult_p.h
