Add qt6 static docker image
Add qt6.2 docker image and github action

Fixes: QBS-1534
Change-Id: Ia1675697fbd6bcbaabfafc11940bf5cb9447206b
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -329,6 +329,12 @@ jobs:
             script: './scripts/test-qt.sh',
           }
         - {
+            name: 'Run Linux tests (gcc, Qt 6.2 static)',
+            image: 'focal-qt6-static',
+            profile: 'qt-gcc_64',
+            script: './scripts/test-qt.sh',
+          }
+        - {
             name: 'Run Android tests (Qt 5.13)',
             image: 'focal-android-513',
             profile: '',
