Factorize out probe code from module loader
Change-Id: I349589aa5d92f221e43c61722e53a80d59f183b0
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/src/lib/corelib/CMakeLists.txt
+++ b/src/lib/corelib/CMakeLists.txt
@@ -234,6 +234,8 @@ set(LANGUAGE_SOURCES
     moduleproviderloader.h
     preparescriptobserver.cpp
     preparescriptobserver.h
+    probesresolver.cpp
+    probesresolver.h
     projectresolver.cpp
     projectresolver.h
     property.cpp
