Create Host service and update FileInfo
In order to use PathProbe and BinaryProbe in module providers, the qbs
properties used in the probes will be replaced by the Host and the
FileInfo services.

The new Host service implements these host related properties:
    architecture,
    os,
    platform,
    osVersion,
    osBuildVersion,
    osVersionParts,
    osVersionMajor,
    osVersionMinor,
    osVersionPatch,
    nullDevice

The FileInfo service implements these properties:
    pathSeparator,
    pathListSeparator

Task-number: QBS-1612
Change-Id: Icecde3d82a531a5b143ce150ffd544ee674e6f4d
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@qt.io>
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/src/lib/corelib/CMakeLists.txt
+++ b/src/lib/corelib/CMakeLists.txt
@@ -154,6 +154,7 @@ set(JS_EXTENSIONS_SOURCES
     environmentextension.cpp
     file.cpp
     fileinfoextension.cpp
+    host.cpp
     jsextensions.cpp
     jsextensions.h
     moduleproperties.cpp
