Add Qt 6.3 Android image and update ANDROID_PLATFORM
Add docker image focal-android-630 and corresponding github action.

Update ANDROID_PLATFORM to "android-30" because Qt AndroidManifest
uses property allowNativeHeapPointerTagging (QTBUG-97009) since
6.2.1 which was added in API30.

Also update android test because bug QTBUG-97834 was solved in Qt 6.3.

Change-Id: Id45701433a779d2c6cb8dfdbfb0676e2daad6f88
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,7 +54,7 @@ services:
   focal-android-513:
     << : *linux
     hostname: focal-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-5.13.2-3
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-5.13.2-4
     build:
       dockerfile: docker/focal/test-android.Dockerfile
       context: .
@@ -65,7 +65,7 @@ services:
   focal-android-514:
     << : *linux
     hostname: focal-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-5.14.0-3
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-5.14.0-4
     build:
       dockerfile: docker/focal/test-android.Dockerfile
       context: .
@@ -76,7 +76,7 @@ services:
   focal-android-515:
     << : *linux
     hostname: focal-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-5.15.1-3
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-5.15.1-4
     build:
       dockerfile: docker/focal/test-android.Dockerfile
       context: .
@@ -87,7 +87,7 @@ services:
   focal-android-600:
     << : *linux
     hostname: focal-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-6.0.0-3
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-6.0.0-4
     build:
       dockerfile: docker/focal/test-android.Dockerfile
       context: .
@@ -98,12 +98,23 @@ services:
   focal-android-620:
     << : *linux
     hostname: focal-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-6.2.0-0
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-6.2.0-4
     build:
       dockerfile: docker/focal/test-android.Dockerfile
       context: .
       args:
         QT_VERSION: 6.2.0
+        ANDROID_NDK_VERSION: 23.0.7599858
+
+  focal-android-630:
+    << : *linux
+    hostname: focal-android
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-6.3.0-0
+    build:
+      dockerfile: docker/focal/test-android.Dockerfile
+      context: .
+      args:
+        QT_VERSION: 6.3.0
         ANDROID_NDK_VERSION: 23.0.7599858
 
   focal-android-ndk-r19c:
