Configure CI for Digital Mars compiler
 ... and also as fix the typo in the DmcProbe.qbs file.

Change-Id: I2f62b862b900c92be97c6eb6a9b461ac5973b8ea
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -808,6 +808,11 @@ jobs:
             testProfile: 'watcom-2_0_0-x86',
             script: './scripts/test-baremetal.sh',
           }
+        - {
+            name: 'Run Windows tests (DigitalMars)',
+            testProfile: 'dmc-8_42_0-x86',
+            script: './scripts/test-baremetal.sh',
+          }
     env:
       QTEST_FUNCTION_TIMEOUT: 9000000
       QBS_AUTOTEST_PROFILE: 'extra'
@@ -832,6 +837,8 @@ jobs:
       run: choco install -y pkgconfiglite --download-checksum=6004df17818f5a6dbf19cb335cc92702
     - name: Install OpenWatcom
       uses: ./.github/actions/download-ow
+    - name: Install DigitalMars
+      uses: ./.github/actions/download-dm
     - name: Setup Qbs
       run: |
         qbs setup-toolchains --detect
