Add support for other platforms supported by Open Watcom
This patch adds support for the following target platforms:

 * DOS - both 32/16 bit.
 * OS/2 - both 32/16 bit.
 * Windows - 16 bit.

Also all these platforms covered in CI tests.

Change-Id: Ie75d9203c50f4d61546b19328992ff0e107d9942
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -804,8 +804,33 @@ jobs:
       matrix:
         config:
         - {
-            name: 'Run Windows tests (OpenWatcom)',
-            testProfile: 'watcom-2_0_0-x86',
+            name: 'Run Windows tests (OpenWatcom DOS 32 bit)',
+            testProfile: 'watcom-2_0_0-dos-x86',
+            script: './scripts/test-baremetal.sh',
+          }
+        - {
+            name: 'Run Windows tests (OpenWatcom DOS 16 bit)',
+            testProfile: 'watcom-2_0_0-dos-x86_16',
+            script: './scripts/test-baremetal.sh',
+          }
+        - {
+            name: 'Run Windows tests (OpenWatcom OS/2 32 bit)',
+            testProfile: 'watcom-2_0_0-os2-x86',
+            script: './scripts/test-baremetal.sh',
+          }
+        - {
+            name: 'Run Windows tests (OpenWatcom OS/2 16 bit)',
+            testProfile: 'watcom-2_0_0-os2-x86_16',
+            script: './scripts/test-baremetal.sh',
+          }
+        - {
+            name: 'Run Windows tests (OpenWatcom Windows 32 bit)',
+            testProfile: 'watcom-2_0_0-windows-x86',
+            script: './scripts/test-baremetal.sh',
+          }
+        - {
+            name: 'Run Windows tests (OpenWatcom Windows 16 bit)',
+            testProfile: 'watcom-2_0_0-windows-x86_16',
             script: './scripts/test-baremetal.sh',
           }
         - {
