--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -177,7 +177,7 @@ jobs:
 
   build-windows:
     name: Build on Windows
-    runs-on: windows-latest
+    runs-on: windows-2022
     timeout-minutes: 60
     env:
       BUILD_OPTIONS: |
@@ -238,7 +238,7 @@ jobs:
 
   build-windows-mingw:
     name: Build on Windows (MinGW)
-    runs-on: windows-latest
+    runs-on: windows-2022
     timeout-minutes: 60
     env:
       BUILD_OPTIONS: |
@@ -708,7 +708,7 @@ jobs:
 
   test-windows:
     name: ${{ matrix.config.name }}
-    runs-on: windows-latest
+    runs-on: windows-2019
     timeout-minutes: 60
     needs: build-windows
     strategy:
