Fix/suppress compiler warnings with Qt6/MSVC
Change-Id: Ic3a13c71a841a3e6c31a2c6d06c79836a54318fb
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/src/lib/scriptengine/CMakeLists.txt
+++ b/src/lib/scriptengine/CMakeLists.txt
@@ -73,7 +73,8 @@ elseif(WIN32)
 endif()
 
 if (MSVC)
-    set(QT_SCRIPT_CXX_FLAGS "/wd4291" "/wd4344" "/wd4396" "/wd4503" "/wd4800" "/wd4819" "/wd4996")
+    set(QT_SCRIPT_CXX_FLAGS "/wd4146" "/wd4244" "/wd4267" "/wd4291" "/wd4334"
+        "/wd4344" "/wd4396" "/wd4503" "/wd4800" "/wd4819" "/wd4996")
 else()
     set(QT_SCRIPT_CXX_FLAGS "-fno-strict-aliasing" "-w"
         "-Wall" "-Wreturn-type" "-Wcast-align" "-Wchar-subscripts"
