Fix building release packages
Change-Id: Ic3957b7dbaf449bb52af117d8a84fc3752a9309f
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -121,7 +121,7 @@ jobs:
 
   build-windows-with-docker:
     name: Build on Windows (Docker)
-    runs-on: windows-latest
+    runs-on: windows-2019
     timeout-minutes: 60
     env:
       WITH_TESTS: 0
