Update focal-qt6 image to Qt 6.2.4
Change-Id: I098072d593d927d52b56e06d48e3fbe018c072a4
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/docker/focal/Dockerfile
+++ b/docker/focal/Dockerfile
@@ -75,7 +75,7 @@ RUN apt-get update -qq && \
     update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-8 100 && \
     update-alternatives --install /usr/bin/clang-check clang-check /usr/bin/clang-check-8 100 && \
     update-alternatives --install /usr/bin/python python /usr/bin/python3 100 && \
-    pip install beautifulsoup4 lxml protobuf pyyaml
+    pip install beautifulsoup4 lxml protobuf==3.19.1 pyyaml
 
 ENV LLVM_INSTALL_DIR=/usr/lib/llvm-8
 
