GitHub actions: do not fail Windows builds
... if pkgconfiglite fails to install.

Change-Id: If4999bdf032f55015fe3fb17ffb229ac570c91e7
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -769,6 +769,7 @@ jobs:
       run: echo "./release/install-root/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
     - name: Install required packages
       run: choco install -y pkgconfiglite --download-checksum=6004df17818f5a6dbf19cb335cc92702
+      continue-on-error: true  # pkgconfiglite installation is flaky
     - name: Install Qt
       uses: ./.github/actions/download-qt
       with:
