Make handling of deprecated items and properties configurable
As of now, a newly deprecated property leads to users getting bombarded
with warnings, even though they did not yet have a chance to adapt their
project.
Now the warnings appear by default one minor version before removal,
which together with our convention of keeping deprecated properties for
at least two minor versions gives users enough time to adapt without
getting spammed.
There is also a mode for switching to the previous behavior (for early
detection), as well as the possibility to trigger errors instead of
warnings, which should be helpful in CI configurations.
To support the case where the user cannot do anything about them, the
warnings can also be suppressed altogether.

Change-Id: I295f816758f0f111fcb0351581a4328be3af5668
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@qt.io>
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/src/lib/corelib/CMakeLists.txt
+++ b/src/lib/corelib/CMakeLists.txt
@@ -306,6 +306,7 @@ set(TOOLS_SOURCES
     cleanoptions.cpp
     codelocation.cpp
     commandechomode.cpp
+    deprecationwarningmode.cpp
     dynamictypecheck.h
     error.cpp
     executablefinder.cpp
@@ -389,6 +390,7 @@ set(TOOLS_HEADERS
     cleanoptions.h
     codelocation.h
     commandechomode.h
+    deprecationwarningmode.h
     error.h
     generateoptions.h
     installoptions.h
