--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -617,6 +617,7 @@ jobs:
             runner: 'macos-12',
             target: 'desktop',
             toolchain: 'clang_64',
+            xcodeVersion: '13.4.1',
             testProfile: 'xcode_13_4_1-macosx-x86_64',
             qtVersion: '5.15.2',
             script: './scripts/test-qbs.sh',
@@ -626,6 +627,7 @@ jobs:
             runner: 'macos-12',
             target: 'desktop',
             toolchain: 'clang_64',
+            xcodeVersion: '13.4.1',
             testProfile: 'xcode_13_4_1-macosx-x86_64',
             qtVersion: '6.3.1',
             script: './scripts/test-qt.sh',
@@ -635,6 +637,7 @@ jobs:
             runner: 'macos-12',
             target: 'ios',
             toolchain: 'ios',
+            xcodeVersion: '13.4.1',
             testProfile: 'xcode_13_4_1-iphoneos-arm64',
             qtVersion: '5.15.2',
             script: './scripts/test-qbs.sh',
@@ -644,6 +647,7 @@ jobs:
             runner: 'macos-12',
             target: 'ios',
             toolchain: 'ios',
+            xcodeVersion: '13.4.1',
             testProfile: 'xcode_13_4_1-iphonesimulator-x86_64',
             qtVersion: '5.15.2',
             script: './scripts/test-qbs.sh',
@@ -653,6 +657,7 @@ jobs:
             runner: 'macos-11',
             target: 'desktop',
             toolchain: 'clang_64',
+            xcodeVersion: '12.5.1',
             testProfile: 'xcode_12_5_1-macosx-x86_64',
             qtVersion: '5.15.2',
             script: './scripts/test-qbs.sh',
@@ -662,6 +667,7 @@ jobs:
             runner: 'macos-11',
             target: 'desktop',
             toolchain: 'clang_64',
+            xcodeVersion: '11.7',
             testProfile: 'xcode_11_7-macosx-x86_64',
             qtVersion: '5.15.2',
             script: './scripts/test-qbs.sh',
@@ -687,6 +693,8 @@ jobs:
         target: ${{ matrix.config.target }}
         toolchain: ${{ matrix.config.toolchain }}
         version: ${{ matrix.config.qtVersion }}
+    - name: Select Xcode
+      run: sudo xcode-select --switch /Applications/Xcode_${{ matrix.config.xcodeVersion }}.app
     - name: Setup Qbs
       run: |
         qbs setup-toolchains --detect
