GitHub actions: print all threads on crash
Change-Id: I3c72d98147ebe4b4d61512a87c9bc72effe6b431
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -711,7 +711,7 @@ jobs:
       if: ${{ failure() }}
       run: |
         for f in $(find /cores -maxdepth 1 -name 'core.*' -print); do
-          lldb --core $f --batch --one-line "bt"
+          lldb --core $f --batch --one-line "bt all"
         done;
 
   test-windows:
