GitHub actions: make ASAN build a separate job
We might want to add UB sanitizer job in the future.

Also, this should speed up linux test jobs such as
Android that currently use ASAN binaries.

Change-Id: I277c5d2713d88b5e706f76b7a098f82d3f9483f2
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,10 +81,19 @@ jobs:
             image: 'focal-qt6',
             script: './scripts/build-qbs-with-qbs.sh',
             options: 'modules.cpp.compilerWrapper:ccache
-                      products.qbsscriptengine.qbsbuildconfig.enableAddressSanitizer:false
                       modules.qbs.debugInformation:true
                       modules.qbsbuildconfig.enableBundledQt:true',
             cacheid: 'gcc-qt6',
+          }
+        - {
+            name: 'Build on Linux (gcc, ASAN)',
+            image: 'focal',
+            script: './scripts/build-qbs-with-qbs.sh',
+            options: 'modules.cpp.compilerWrapper:ccache
+                      modules.qbsbuildconfig.enableAddressSanitizer:true
+                      modules.qbs.debugInformation:true
+                      modules.qbsbuildconfig.enableBundledQt:true',
+            cacheid: 'gcc-asan',
           }
     env:
       BUILD_OPTIONS: ${{ matrix.config.options }}
