Protobuf: Let users provide extra grpc libs for linking
... and make use of that in the CI.

Change-Id: I7e246e265a311ba24ebd6cde808445039d4c3e93
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -617,6 +617,7 @@ jobs:
       QTEST_FUNCTION_TIMEOUT: 9000000
       QBS_AUTOTEST_PROFILE: 'qt'
       QBS_TEST_SOURCE_ROOT: 'tests'
+      QBS_EXTRA_GRPC_LIBS: 'absl_synchronization,gpr'
     strategy:
       fail-fast: false
       matrix:
