--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,6 +95,16 @@ jobs:
                       modules.qbsbuildconfig.enableBundledQt:true',
             cacheid: 'gcc-asan',
           }
+        - {
+            name: 'Build on Linux (gcc, UBSAN)',
+            image: 'focal',
+            script: './scripts/build-qbs-with-qbs.sh',
+            options: 'modules.cpp.compilerWrapper:ccache
+                      modules.qbsbuildconfig.enableUbSanitizer:true
+                      modules.qbs.debugInformation:true
+                      modules.qbsbuildconfig.enableBundledQt:true',
+            cacheid: 'gcc-ubsan',
+          }
     env:
       BUILD_OPTIONS: ${{ matrix.config.options }}
       QTEST_FUNCTION_TIMEOUT: 9000000
