Add docker image focal-android-642 and workaround armv7 package
Add docker image focal-android-642 and corresponding github action.

Add workaround QTBUG-111713 to correct Qt 6.4.2 android armv7 package.

Change-Id: I8f7c5fd566237d4c490fb6014b0a4efbb6f04a53
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -380,6 +380,12 @@ jobs:
             script: './scripts/test-qt-for-android.sh',
           }
         - {
+              name: 'Run Android tests (Qt 6.4.2)',
+              image: 'focal-android-642',
+              profile: '',
+              script: './scripts/test-qt-for-android.sh',
+            }
+        - {
             name: 'Run Android tests (ndk r19c)',
             image: 'focal-android-ndk-r19c',
             profile: '',
