--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -120,6 +120,17 @@ services:
         QT_VERSION: 6.3.0
         ANDROID_NDK_VERSION: 23.0.7599858
 
+  focal-android-642:
+    << : *linux
+    hostname: focal-android
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-6.4.2-0
+    build:
+      dockerfile: docker/focal/test-android.Dockerfile
+      context: .
+      args:
+        QT_VERSION: 6.4.2
+        ANDROID_NDK_VERSION: 23.0.7599858
+
   focal-android-ndk-r19c:
     << : *linux
     hostname: focal-android
