--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -744,15 +744,15 @@ jobs:
             target: 'desktop',
             toolchain: 'win64_msvc2019_64',
             testProfile: 'MSVC2022-x64',
-            qtVersion: '5.15.2',
+            qtVersion: '6.5.0',
             script: './scripts/test-qbs.sh',
           }
         - {
-            name: 'Run Windows tests (MSVC 2022, Qt 6.0.2)',
+            name: 'Run Windows tests (MSVC 2022, Qt 5.15)',
             target: 'desktop',
             toolchain: 'win64_msvc2019_64',
             testProfile: 'MSVC2022-x64',
-            qtVersion: '6.0.2',
+            qtVersion: '5.15.2',
             script: './scripts/test-qt.sh',
           }
         - {
@@ -760,15 +760,15 @@ jobs:
             target: 'desktop',
             toolchain: 'win64_msvc2019_64',
             testProfile: 'clang-cl-x86_64',
-            qtVersion: '5.15.2',
+            qtVersion: '6.5.0',
             script: './scripts/test-qbs.sh',
           }
         - {
             name: 'Run Windows tests (MinGW)',
             target: 'desktop',
-            toolchain: 'win64_mingw81',
+            toolchain: 'win64_mingw',
             testProfile: 'mingw-qt',
-            qtVersion: '5.15.2',
+            qtVersion: '6.5.0',
             script: './scripts/test-qbs.sh',
           }
     env:
