Implement Pimpl class using std::unique_ptr
... and propagate_const from KDAB tools.

The propagate_const class fixes the issue that d-pointer in const-methods
is not const.

Such Pimpl class has several advantages over the raw pointer.

- the d-tor is trivial and removes the burden for the author/reviewer to
remember to check if pointer is deleted correctly.

- constness is now propageted correctly to the d-pointer in const
methods.

- makes the intention clear that we're using the PIMPL idiom

Change-Id: Ibc42cdaeb6d3303fea81ac6edd63bea0da2ac08d
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/src/lib/corelib/CMakeLists.txt
+++ b/src/lib/corelib/CMakeLists.txt
@@ -343,6 +343,7 @@ set(TOOLS_SOURCES
     msvcinfo.cpp
     msvcinfo.h
     pathutils.h
+    pimpl.h
     persistence.cpp
     persistence.h
     porting.h
@@ -357,6 +358,7 @@ set(TOOLS_SOURCES
     progressobserver.cpp
     progressobserver.h
     projectgeneratormanager.cpp
+    propagate_const.h
     qbsassert.cpp
     qbsassert.h
     qbspluginmanager.cpp
