Loader: Refactor dependency resolving
Namely:
  - Move code into its own class.
  - Split up the larger functions into sensible chunks.
  - Add more documentation.
  - Introduce loaderutils.{h,cpp} for shared functions and
    data structures.

Change-Id: Ib41bdd1a7c087b2757f6363a3c58e87022b4f00b
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/src/lib/corelib/CMakeLists.txt
+++ b/src/lib/corelib/CMakeLists.txt
@@ -240,6 +240,8 @@ set(LOADER_SOURCES
     astimportshandler.h
     astpropertiesitemhandler.cpp
     astpropertiesitemhandler.h
+    dependenciesresolver.cpp
+    dependenciesresolver.h
     groupshandler.cpp
     groupshandler.h
     itemreader.cpp
@@ -248,6 +250,8 @@ set(LOADER_SOURCES
     itemreaderastvisitor.h
     itemreadervisitorstate.cpp
     itemreadervisitorstate.h
+    loaderutils.cpp
+    loaderutils.h
     localprofiles.cpp
     localprofiles.h
     moduleinstantiator.cpp
