--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -386,6 +386,12 @@ jobs:
               script: './scripts/test-qt-for-android.sh',
             }
         - {
+              name: 'Run Android tests (Qt 6.5.0)',
+              image: 'focal-android-650',
+              profile: '',
+              script: './scripts/test-qt-for-android.sh',
+            }
+        - {
             name: 'Run Android tests (ndk r19c)',
             image: 'focal-android-ndk-r19c',
             profile: '',
