--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -131,6 +131,17 @@ services:
         QT_VERSION: 6.4.2
         ANDROID_NDK_VERSION: 23.0.7599858
 
+  focal-android-650:
+    << : *linux
+    hostname: focal-android
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-6.5.0-0
+    build:
+      dockerfile: docker/focal/test-android.Dockerfile
+      context: .
+      args:
+        QT_VERSION: 6.5.0
+        ANDROID_NDK_VERSION: 25.1.8937393
+
   focal-android-ndk-r19c:
     << : *linux
     hostname: focal-android
