--- a/src/lib/corelib/CMakeLists.txt
+++ b/src/lib/corelib/CMakeLists.txt
@@ -266,6 +266,8 @@ set(LOADER_SOURCES
     probesresolver.h
     productitemmultiplexer.cpp
     productitemmultiplexer.h
+    productscollector.cpp
+    productscollector.h
     projectresolver.cpp
     projectresolver.h
     projecttreebuilder.cpp
