GitHub actions: fix macOS job
Use qbspkgconfig in proto examples.

Pass additional libs to proto/grpc tests.

Change-Id: Ic3018fcb5b2350610a4ab70b97efad1abaac9252
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -611,7 +611,7 @@ jobs:
       QTEST_FUNCTION_TIMEOUT: 9000000
       QBS_AUTOTEST_PROFILE: 'qt'
       QBS_TEST_SOURCE_ROOT: 'tests'
-      QBS_EXTRA_GRPC_LIBS: 'absl_synchronization,grpc,gpr'
+      QBS_EXTRA_GRPC_LIBS: 'absl_cord,absl_cordz_handle,absl_cordz_info,absl_synchronization,grpc,gpr'
     strategy:
       fail-fast: false
       matrix:
